# College-recruiting

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: pages.yml  refresh-data.yml
docs/: RESEARCH.md
recruiting/: __init__.py  cfbd_client.py  cli.py  db.py  export.py  ingest.py  models.py  query.py  schema.sql
site/: data.json  index.html
tests/: test_recruiting.py
