[project]
name = "college-recruiting"
version = "0.1.0"
description = "Database of HS football players, their college offers, position, and graduation year"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
recruiting = "recruiting.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["recruiting"]

[tool.pytest.ini_options]
testpaths = ["tests"]
